// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> should render button 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  line-height: 1.3333333;
  outline: none;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c1 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c0 {
  margin: 0 0 0 0.8rem;
}

.c1:hover {
  background: var(--primary-lighter);
}

<div>
  <button
    class="sc-AykKD c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<PrimaryButton /> should render loader 1`] = `
.c3 {
  margin: 2rem 0;
  -webkit-animation: jitEcr 800ms ease-in-out infinite alternate;
  animation: jitEcr 800ms ease-in-out infinite alternate;
}

.c3:after {
  background: var(--primary);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  line-height: 1.3333333;
  outline: none;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
  padding: 1.1rem 1rem 1.3rem;
}

.c1 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c0 {
  margin: 0 0 0 0.8rem;
}

.c1:hover {
  background: var(--primary-lighter);
}

.c1 .c2 {
  margin: 0;
}

.c1 .c2:after {
  background: #fff;
}

<div>
  <button
    class="sc-AykKD sc-AykKE c0 c1"
  >
    <span
      class="c2 c3"
    />
  </button>
</div>
`;
